[workspace]
# In alphabetical order
members = [
    "influxdb3",
    "influxdb3_authz",
    "influxdb3_cache",
    "influxdb3_catalog",
    "influxdb3_clap_blocks",
    "influxdb3_client",
    "influxdb3_id",
    "influxdb3_internal_api",
    "influxdb3_load_generator",
    "influxdb3_process",
    "influxdb3_processing_engine",
    "influxdb3_py_api",
    "influxdb3_query_executor",
    "influxdb3_server",
    "influxdb3_shutdown",
    "influxdb3_system_tables",
    "influxdb3_telemetry",
    "influxdb3_test_helpers",
    "influxdb3_types",
    "influxdb3_wal",
    "influxdb3_write",
    "iox_query_influxql_rewrite",
    "object_store_utils",
]
default-members = ["influxdb3"]

resolver = "2"

exclude = [
    "*.md",
    "*.txt",
    ".circleci/",
    ".editorconfig",
    ".git*",
    ".github/",
    ".kodiak.toml",
    "LICENSE*",
]

[workspace.package]
# `version` uses a `-nightly` on `main` branch so that snapshot releases cut from main will display
# `-nightly` in the revision information of the running server. Releases cut from a release branch
# will not use `-nightly`.
#
# The version here leads the latest released minor version. So, if the latest release is `3.0.2`,
# then this will be `3.1.0-nightly`. Once `3.1.0` is released, this will be bumped to `3.2.0-nightly`,
# and will remain that regardless of how many `3.1.x` patch releases are done prior to the `3.2.0`
# release.
version = "3.9.0-nightly"
authors = ["InfluxData OSS Developers"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "56", features = ["prettyprint", "chrono-tz"] }
arrow-array = "56"
arrow-buffer = { version = "56" }
arrow-csv = "56"
arrow-flight = { version = "56", features = ["flight-sql-experimental"] }
arrow-ipc = { version = "56" }
arrow-json = "56"
arrow-schema = { version = "56" }
assert_cmd = "2.1.1"
async-trait = "0.1"
backon = { version = "1.5.0", features = ["tokio"] }
backtrace = "0.3"
base64 = "0.21.7"
bimap = "0.6.3"
bitcode = { version = "0.6.3", features = ["serde"] }
byteorder = "1.3.4"
bytes = "1.9"
cargo_metadata = "0.19.2"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_builder = "4.5.47"
clru = "0.6.2"
crc32fast = "1.2.0"
criterion = { version = "0.5", features = ["html_reports"] }
cron = "0.15"
crossbeam-channel = "0.5.11"
csv = "1.3.0"
owo-colors = "4.2.0"
# Use DataFusion fork (see below)
datafusion = { version = "50" }
dashmap = "6.1.0"
dotenvy = "0.15.7"
flate2 = "1.0.27"
futures = "0.3.31"
futures-util = "0.3.31"
hashbrown = { version = "0.15.1", features = ["serde"] }
hex = "0.4.3"
home = "0.5.12"
hostname = "0.4.1"
http = {version = "1"}
http-body = {version = "1"}
http-body-util = {version = "0.1"}
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["ring", "http1", "http2", "rustls-native-certs"] }
hyper = {version = "1"}
hyper-util = {version = "0.1", features=["server-graceful"]}
insta = { version = "1.39", features = ["json", "redactions", "yaml"] }
indexmap = { version = "2.11.0" }
itertools = "0.13.0"
libc = { version = "0.2" }
mime = "0.3.17"
mockito = { version = "1.4.0", default-features = false }
mockall = { version = "0.13.0" }
non-empty-string = "0.2.5"
num_cpus = "1.16.0"
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
paste = "1.0.15"
parquet = { version = "56", features = ["object_store"] }
pbjson = "0.9"
pbjson-build = "0.9"
pbjson-types = "0.7"
pin-project-lite = "0.2"
pretty_assertions = { version = "1.4.0", features = ["unstable"] }
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
proptest = { version = "1", default-features = false, features = ["std"] }
pyo3 = { version = "0.27.2", features = ["experimental-async"]}
rand = "0.8.5"
rcgen = "0.13.2"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rstest = "0.26"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-webpki = { version = "0.103", default-features = false, features = ["ring", "std"] }
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
# serde_json is set to 1.0.127 to prevent a conflict with core, if that gets updated upstream, this
# could be changed back to 1.0
serde_json = "1.0.127"
serde_urlencoded = "0.7.0"
serde_with = "3.8.1"
sha2 = "0.10.8"
snafu = "0.8"
snap = "1.0.0"
sqlparser = "0.48.0"
# Delaying upgrade until <https://github.com/GuillaumeGomez/sysinfo/issues/1496> is fixed
sysinfo = "<0.38"
tempfile = "3.14.0"
test-log = { version = "0.2.16", features = ["trace"] }
thiserror = "1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-rustls = { version = "0.25", default-features = false, features = ["ring", "tls12"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tonic = { version = "0.13", features = ["tls-ring", "tls-native-roots"] }
tonic-build = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
tower = "0.5"
twox-hash = "2.1.0"
unicode-segmentation = "1.11.0"
url = "2.5.0"
urlencoding = "1.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
num = { version = "0.4.3" }

# Core.git crates we depend on
arrow_util = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
authz = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
data_types = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
datafusion_util = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
executor = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
influxdb-line-protocol = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
influxdb_influxql_parser = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
influxdb_iox_client = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_http = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_http_util = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_query = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_query_params = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_query_influxql = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_system_tables = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_time = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
iox_v1_query_api = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
metric = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
metric_exporters = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
object_store_metrics = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
observability_deps = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
panic_logging = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
parquet_file = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
query_functions = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
schema = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16", features = ["v3"]}
service_common = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
service_grpc_flight = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
test_helpers = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
tokio_metrics_bridge = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
trace = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
trace_exporters = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
trace_http = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
tracker = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16" }
trogging = { git = "https://github.com/influxdata/influxdb3_core", rev = "c966734ddf434bbf36489d7ba942864d423c1f16", features = ["clap"] }

[workspace.lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
unreachable_pub = "deny"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
future_not_send = "deny"
todo = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

# This profile optimizes for runtime performance and small binary size at the expense of longer
# build times. It's most suitable for final release builds.
[profile.release]
lto = "fat"

[profile.bench]
debug = true

# This profile optimizes for short build times at the expense of larger binary size and slower
# runtime performance. It's most suitable for development iterations.
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true
debug = "line-tables-only"

# This profile extends the `quick-release` profile with debuginfo turned on in order to
# produce more human friendly symbols for profiling tools
[profile.quick-bench]
inherits = "quick-release"
debug = 1

# Per insta docs: https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# Patching Datafusion
[patch.crates-io]
# Use DataFusion fork
# See https://github.com/influxdata/arrow-datafusion/pull/78 for contents
#
# NOTE: This is an incomplete list of datafusion dependencies, but enough to get all dependencies to use our forked
#       version. Should you ever encounter a `datafusion-*` crate that is duplicated (i.e. `Cargo.lock` lists both the
#       crates.io release and our fork), just add it to this list here.
datafusion = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-common = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-execution = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-expr = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-sql = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
